--- a/pages/register.html
+++ b/pages/register.html
@@ -73,6 +73,9 @@
                         <label class="form-label small fw-bold text-secondary">Confirm Password</label>
                         <input id="confirmPassword" type="password" class="form-control" placeholder="••••••••">
                     </div>
+                    <!-- note -->
+                    <p class="text-secondary small"> Note :Password must be at least 4 characters long and contain at least one uppercase letter, one lowercase letter, and one number.</p>
+
                 </div>
 
                 <button id="register-btn" class="btn btn-success w-100 py-2 fw-bold" onclick="register()">
