--- a/pages/register.html
+++ b/pages/register.html
@@ -91,7 +91,7 @@
 </div>
 
     <script src="../asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
-        <script src="../asset/js/script.js"></script>
+        <!-- <script src="../asset/js/script.js"></script> -->
         <!-- sweet alert -->
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="../asset/js/auth/register.js"></script>
