--- a/pages/all-article.html
+++ b/pages/all-article.html
@@ -155,7 +155,7 @@
             </div>
           </div>
 
-          <!-- EDIT FORM -->
+          <!--=================================== EDIT FORM=============================== -->
           <form id="articleForm" class="edit-form d-none" novalidate>
             <div class="create-head">
               <h2 id="formTitle" class="edit-title">Edit Article</h2>
