--- a/pages/all-article.html
+++ b/pages/all-article.html
@@ -132,7 +132,7 @@
                   <tbody id="tbody"></tbody>
                 </table>
 
-                <!-- Delete Confirm Modal (simple modal) -->
+                <!--====================== Delete Confirm Modal simple modal =======================-->
                 <div id="deleteConfirmModal" class="modal" tabindex="-1" style="display:none;">
                   <div class="modal-dialog">
                     <div class="modal-content">
